web/styles/settings.css
/* ... */
#convert-demo-organization-form {
    .domain_label {
        display: inline-block;
    }
}

#edit-user-form .alert-notification.custom-field-status,
#profile-settings .alert-notification.custom-field-status,
#profile-settings .alert-notification.full-name-status,
#profile-settings .alert-notification.timezone-setting-status {
    padding-top: 0;
    padding-bottom: 0;
    margin-top: 0;
    padding-left: 0;
    margin-left: 5px;
    border: none;
}

.user_timezone-dropdown-list-container {
    width: calc(var(--modal-input-width));
}

#profile-settings {
    .custom-profile-fields-form .custom_user_field label,
    .full-name-change-container label,
    .timezone-setting-form label {
        min-width: fit-content;
    }

    .person_picker {
        /* Subtract 2 * (2px padding) + 2 * (1px border) */
        min-width: calc(var(--modal-input-width) - 6px);
    }

    .settings-textarea {
        /* Subtract 6px of padding from side */
        width: calc(var(--modal-input-width) - 12px);
    }
}

.required-symbol {
    color: hsl(0deg 66% 60%);
}

.settings-profile-user-field {
    margin-top: 5px;
    max-width: fit-content;

    > .settings_url_input {
        margin-bottom: 0;
    }
}

.settings-profile-user-field.editable-date-field {
    display: grid;
    grid-template-areas: "datepicker close-button";
    grid-template-columns: minmax(0, 1fr) 1.4285em; /* 20px at 14px em */
    align-items: center;
    width: var(--modal-input-width);

    .flatpickr-wrapper {
        grid-column: datepicker-start / close-button-end;
        grid-row: close-button;
    }
}

.control-label-disabled {
    color: hsl(0deg 0% 50%);
}

.admin-realm-message-retention-days {
    width: 5ch;
    text-align: right;
}

.delete-choice {
    display: inline-flex;

    &.hide {
        display: none;
    }
}

#add-default-stream-modal {
    .dropdown-widget-button {
        display: inline-flex;
    }

    .choice-row {
        margin-bottom: 10px;

        &:last-of-type {
            /* Remove margin-bottom for last choice row
               to remove extra space between the modal
               content and footer. */
            margin-bottom: 0;

            .delete-choice {
                display: none;
            }
        }
    }
}

.add_default_streams_button_container {
    display: flex;
    flex-wrap: wrap;
    margin-top: auto;
    margin-bottom: 12px;
    gap: 6px;

    #show-add-default-streams-modal {
        padding-top: 0;
        padding-bottom: 0;

        min-width: 0;
    }
}

#add-custom-emoji-modal {
    & input[type="text"] {
        padding: 6px;
    }

    .emoji_name_input {
        margin-top: 10px;
    }

    #emoji-file-name {
        white-space: nowrap;
        font-style: italic;
        color: hsl(0deg 0% 67%);
    }

    #emoji_preview_text {
        margin-top: 6px;
    }
}

#emoji_file_input_error {
    vertical-align: middle;
}

.emoji-override-warning {
    vertical-align: middle;
    margin-left: 3px;
    opacity: 0.7;

    &:hover {
        opacity: 1;
    }
}

.add-new-playground-box {
    & button {
        margin-left: calc(10em + 20px) !important;
    }
    margin-bottom: 15px;

    .checkbox {
        margin-top: 5px;
    }
}

.settings-highlight-box .wrapper {
    margin: 10px 0;
}

.admin_profile_fields_table,
.edit_profile_field_choices_container,
.profile_field_choices_table,
.admin_linkifiers_table,
.admin_channel_folders_table {
    .movable-row {
        .move-handle {
            cursor: move;
            user-select: none;
            margin-right: 5px;
        }

        .fa-ellipsis-v {
            color: hsl(0deg 0% 75%);
            position: relative;
            top: 1px;
        }
    }
}

.admin_linkifiers_table {
    th:first-child,
    td:first-child {
        white-space: nowrap;
    }

    th.convert-url-heading {
        display: inline-flex;
        align-items: center;
        gap: 3px;
    }

    td.convert-cell {
        text-align: center;
    }
}

.alternative-url-template-row {
    display: flex;
    align-items: center;
    gap: 4px;
    margin-bottom: 4px;

    & input {
        flex: 1;
    }

    &:last-child .delete-alternative-url-template {
        visibility: hidden;
    }
}

#organization-permissions {
    .dropdown-widget-button {
        color: var(--color-text-default);
    }
}

#organization-settings {
    .dropdown-widget-button {
        color: var(--color-text-default);
    }
}

.org-permissions-form .pill-container,
.org-settings-form .pill-container {
    /* Subtract 2 * (2px padding) + 2 * (1px border) */
    min-width: calc(var(--modal-input-width) - 6px);

    .input:first-child:empty::before {
        opacity: 0.5;
        content: attr(data-placeholder);
    }
}

.progressive-table-wrapper {
    position: relative;
    max-height: calc(95vh - 220px);
    overflow: auto;
    width: 100%;
}

#admin-default-channels-list .progressive-table-wrapper {
    max-height: calc(95vh - 280px);
}

.edit_bot_form {
    font-size: 100%;
    padding: 0;

    .buttons {
        margin: 10px 0 5px;
    }

    #current_bot_avatar_image {
        margin: 5px 0 8px;
    }

    .edit_bot_avatar_preview_text {
        display: none;
    }
}

#add_bot_preview_text {
    display: none;
}

.edit_bot_avatar_preview_image,
#add_bot_preview_image {
    height: 100px;
    width: 100px;
    margin: 2px 0 8px;
}

#add-alert-word {
    & form {
        margin-bottom: 4px;
    }

    & input {
        margin-bottom: 0;
    }
}

.admin-linkifier-form,
.admin-playground-form {
    & label {
        float: left;
        padding-top: 5px;
        width: 10em;
        text-align: right;
        margin-right: 20px;
    }
}

.admin-profile-field-form #custom_external_account_url_pattern input,
#edit-custom-profile-field-form-modal .custom_external_account_detail input {
    width: 70%;
}
/* ... */

